--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -94,42 +94,48 @@
 
 		</div>
 
-		<!-- -------------------------- GRAPHIC: Maps of rainfall deficiency from 2013 -------------------------- -->
+	</div>
 
-		<div class="trigger" data-space-above="75" data-space-below="25"></div>
+	<div class="trigger" data-space-above="50" data-space-below="50"></div>
 
-		<div class="isolation_block">
+	<div class="fullscreen_container">
+
+		<div class="breakout_block">
 
 			<p>So what has happened in these areas?</p>
 
-		</div>
-
-		<!-- -------------------------- GRAPHIC: Maps of rainfall deficiency from 2014 -------------------------- -->
-
-		<div class="trigger" data-space-above="75" data-space-below="25"></div>
-
-		<div class="isolation_block">
-
 			<p>The Bureau of Meteorology measures drought in terms of "rainfall deficiency". Essentially, this compares rainfall over a given period to the long-term average, and then determines if it is above or below average, and by how much. Put simply it's a measurement that can show if there is too little – or too much – rain.</p>
-
-
-		</div>
-
-
-		<!-- -------------------------- GRAPHIC: Maps of rainfall deficiency from 2015 -------------------------- -->
-
-		<div class="trigger" data-space-above="75" data-space-below="25"></div>
-
-		<div class="isolation_block">
 
 			<p>Maps of rainfall deficiency show a significantly large portion of eastern Australia has been experiencing dryer than normal conditions since 2013, with the exception of a decent amount of rain in 2016.</p>
 
 		</div>
 
+	</div>
+
+
+	<div class="editorial_container">
+
+		<!-- -------------------------- GRAPHIC: Maps of rainfall deficiency from 2013 -------------------------- -->
+
+		<div class="trigger" data-space-above="75" data-space-below="25"></div>
+
+		<!-- -------------------------- GRAPHIC: Maps of rainfall deficiency from 2014 -------------------------- -->
+
+		<div class="trigger" data-space-above="75" data-space-below="25"></div>
+
+		<!-- -------------------------- GRAPHIC: Maps of rainfall deficiency from 2015 -------------------------- -->
+
+		<div class="trigger" data-space-above="75" data-space-below="25"></div>
+
 
 		<!-- -------------------------- GRAPHIC: Maps of rainfall deficiency from 2016 -------------------------- -->
 
 		<div class="trigger" data-space-above="75" data-space-below="25"></div>
+
+
+		<!-- ------------------------- GRAPHIC: Maps of rainfall deficiency from 2017 -------------------------- -->
+
+		<div class="trigger" data-space-above="75" data-space-below="0"></div>
 
 
 		<div class="isolation_block">
@@ -138,10 +144,6 @@
 
 		</div>
 
-
-		<!-- ------------------------- GRAPHIC: Maps of rainfall deficiency from 2017 -------------------------- -->
-
-		<div class="trigger" data-space-above="75" data-space-below="0"></div>
 
 		<!-- ------------------------- Map of soil moisture -------------------------- -->
 
@@ -311,11 +313,16 @@
 
 		</div>
 
-		<!-- ------------------------- Map shoiwng where temperature will increase -------------------------- -->
+	</div>
 
-		<div class="trigger" data-space-above="75" data-space-below="0"></div>
+	<!-- ------------------------- Map shoiwng where temperature will increase -------------------------- -->
 
-		<div class="isolation_block">
+	<div class="trigger" data-space-above="75" data-space-below="0"></div>
+
+
+	<div class="fullscreen_container">
+
+		<div class="breakout_block">
 
 			<p>This will also result in higher evaporation across Australia, which will continue to make drought conditions worse in the future.</p>
 
@@ -325,13 +332,11 @@
 
 		</div>
 
-		<!-- ------------------------- Reset -------------------------- -->
-
-		<div class="trigger" data-space-above="100" data-space-below="100"></div>
-
-
 	</div>
 
+	<!-- ------------------------- Reset -------------------------- -->
+
+	<div class="trigger" data-space-above="100" data-space-below="100"></div>
 	
 
 </div>
