--- a/src/css/new/video.scss
+++ b/src/css/new/video.scss
@@ -7,6 +7,8 @@
 	position: relative;
 	overflow: hidden;
 	margin-bottom: 20px;
+	margin-top: -20px;
+	z-index: -1;
 
 	.video__container {
 
@@ -18,8 +20,9 @@
 			height: 100%;
 			position: absolute;
 			overflow: hidden;
-			z-index: 999;
-			background-image: linear-gradient(to right, #2f262e, transparent);
+			z-index: 99;
+    		background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAGklEQVQIW2NkYGD4zwABjDACQwCqAEkZsggAb94CBcYDBvUAAAAASUVORK5CYII=');
+			/*background-image: linear-gradient(to right, #2f262e, transparent);*/
 			opacity: .9;
 		}
 
@@ -33,7 +36,24 @@
 				min-width: 100%;
 				height: 100%;
 			}
+
+			video poster {
+				width: 100%;
+			}
 		}
+
+		#intro {
+		  position: absolute;
+		  top: 50%;
+		  left: 50%;
+		  width: auto;
+		  min-width: 100%;
+		  height: auto;
+		  min-height: 100%;
+		  transform: translateX(-50%) translateY(-50%);
+		  z-index: -1;
+		}
+
 
 	}
 
@@ -46,7 +66,7 @@
 		right: 0;
 		margin: auto;
 		cursor: pointer;
-		z-index: 90;
+		z-index: 100;
 		opacity: 0.8;
 	}
 
@@ -64,6 +84,35 @@
 		-o-animation: ARROW_MOVE_MAIN 3s infinite;
 		animation: ARROW_MOVE_MAIN 3s infinite;
 	}
+
+	.titles h1 {
+
+		@include mq($until: tablet) {
+			font-size: 33px;
+			line-height: 37px;
+		}
+
+		@include mq($from: tablet) {
+			font-size: 35px;
+			line-height: 39px;
+		}
+
+	}
+
+	.titles h3 {
+
+		@include mq($until: tablet) {
+			font-size: 20px;
+			line-height: 24px;
+		}
+
+		@include mq($from: tablet) {
+			font-size: 24px;
+			line-height: 28px;
+		}
+
+	}
+
 
 	@-webkit-keyframes ARROW_MOVE_MAIN {
 		0% {
