--- a/src/css/new/triggers.scss
+++ b/src/css/new/triggers.scss
@@ -3,7 +3,7 @@
     height: 20px;
     display: block;
     background-color: red;
-    visibility: visible;
+    visibility: hidden;
 }
 
 .trigger[data-space-above='100'] {
