--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -6,9 +6,9 @@
 
 			<div class="semi__transparent__gradient__overlay"></div>
 
-			<div class="video__wrapper">
+			<div data-vid="intro" data-video="intro" data-type="intro" class="video-wrapper">
 
-				<video id="intro" playsinline muted loop="true" poster="https://interactive.guim.co.uk/embed/aus/2018/feb/mdb-multimedia/videos/1024/title-cut_1024.jpg"></video>
+				<video id="intro" playsinline muted loop="true" poster="https://interactive.guim.co.uk/embed/aus/2018/oct/climate/1024/intro.jpg"></video>
 
 			</div>
 
