--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -167,6 +167,19 @@
 
 	<div class="fullscreen_container">
 
+			<div class="multimedia_container hero">
+
+				<div class="picture_frame">
+
+					<img class="imagine" src="<%= path %>/assets/images/drought-2.jpg">
+
+				</div>
+
+				<div class="picture_caption captivate">Donkeys guarding sheep from attacks by wild dogs on Macfarlane station, near Tambo, Queensland. Photograph: Mike Bowers for Guardian Australia</div>
+
+			</div>
+
+
 			<div class="breakout_block">
 
 				<h2>History of droughts in Australia</h2>
@@ -181,6 +194,17 @@
 
 				<p>Her study found that the more recent droughts of the 20th and 21st century were particularly severe.</p>
 
+				<div class="inline_column_image">
+					<div class="inline_block">
+						<img class="imagine" src="<%= path %>/assets/images/drought-1.jpg">
+					</div>
+				</div>
+
+				<div class="picture_caption captivate">
+					Drought-affected land near Tambo, Queensland. Photograph: Mike Bowers for Guardian Australia
+				</div>
+
+
 				<p>"We found that the millenium drought in southern Australia was quite extreme, it was unprecedented in terms of intensity and duration," she said.</p>
 
 				<p>Freund's research showed the WWII and Federation droughts were also particularly intense when compared against the last 400 years.</p>
@@ -192,6 +216,9 @@
 				<p>"The other thing we found, specifically for northern Australia in the warm season, it's getting wetter than ever before."</p>
 
 				<p>Here, you can see a comparison of historical and modern droughts using the reconstructed data up to 1900.</p>
+
+
+
 
 			</div>
 
@@ -245,9 +272,22 @@
 				
 			</div>
 
-			<div class="trigger" data-space-above="0" data-space-below="25"></div>
+			<div class="trigger" data-space-above="0" data-space-below="0"></div>
 
 		</div>
+
+		<div class="multimedia_container hero">
+
+			<div class="picture_frame">
+
+				<img class="imagine" src="<%= path %>/assets/images/drought-3.jpg">
+
+			</div>
+
+			<div class="picture_caption captivate">Cattle stay close to a dam on Sommariva station, a cattle and olive business outside Charleville, Queensland. Photograph: Mike Bowers for Guardian Australia</div>
+
+		</div>
+
 
 		<div class="breakout_block">
 
