--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -40,9 +40,28 @@
 		</ul>
 
 		<div class="standfirst">
-			<p><span class="drop-cap"><span class="drop-cap__inner">I</span></span>n the first part of our series on the drought in Australia, this feature will take you through the current drought conditions, and then put them in historical context with other severe droughts in Australia.</p>
+			<p><span class="drop-cap"><span class="drop-cap__inner">T</span></span>he hardest part of drought is the retreat. Communities withdraw into their shell. Workers leave town as they lose jobs and often housing, animals are sent away, class sizes drop, activity shrinks, dust drifts in through every crack in the house. It’s slow, which is why it messes with your head, creeping forward until something snaps and what begins as confusion reaches consensus.</p>
 
-			<p>Finally, we'll take a look at what effect climate change will have on drought in the future.</p>
+			<p>When Scott Morrison became prime minister in August, nearly seven years after the Queensland dry began, he announced drought was his first priority. He headed up Quilpie way, in the south-west of the state, and stood with farmers as he was asked pointed and persistent questions about climate change. </p>
+
+			<p>“Whether it is climate change or it is not,” Morrison said, “is completely irrelevant to everybody here.”</p>
+
+			<p>For people suffering from lack of income, both in town and farm, drought is awful and relentless as each day dawns an overwhelming blue. Often communities get so focussed on surviving from day to day, it is difficult to see a bigger picture.  While the consequences of drought for regional communities don’t change, the conversations about it are changing, centring more and more on best management in a changing climate. What if this is the new normal?</p> 
+
+			<p>Drought policy is still mostly conceived in the grip of dry times – a fact that has universally been lamented by farmers who have spoken to Guardian Australia.</p> 
+
+			<p>The policy and media debate continues with the same old tropes. As one agribusiness operator said, “you could cut and paste the articles from each drought and no one would notice”.</p>
+
+			<p>So, in this drought series, we are going to cut through the same old coverage and tell you something you hear less often.</p> 
+
+			<p>First, we will give you the latest data on the changing climate. We will take you through the current drought conditions, and then put them in historical context with other severe droughts in Australia. We'll take a look at what effect climate change will have on drought in the future.</p>
+
+			<p>In the second part of the series, we will travel to the worst drought-affected areas of Queensland  to talk to farmers – some of whom have been in drought for years – to show the range of experiences and their outlook on the land, their business and their communities.</p> 
+
+			<p>In the third part, we will report on more recent drought policy history and the current government’s policies, combined with ideas from people on the ground.</p> 
+
+			<p>Lastly, we will consider new ways of thinking about drought, alongside ancient ways of thinking about land management. Combined, these two elements turn conventional drought debate on its head.</p>
+
 
 		</div>
 
@@ -51,6 +70,35 @@
 		<div class="trigger" data-space-above="0" data-space-below="0"></div>
 
 	</div>
+
+
+	<div class="fullscreen_container">
+
+			<div class="multimedia_container hero">
+
+				<div class="picture_frame">
+
+					<img class="imagine" src="<%= path %>/assets/images/drought-1.jpg">
+
+				</div>
+
+				<div class="picture_caption captivate">Drought-affected land near Tambo, Queensland. Photograph: Mike Bowers for Guardian Australia</div>
+
+			</div>
+
+
+		<div class="breakout_block">
+
+			<h2>The current drought</h2>
+
+			<p>First, we're going to show you Australia's farm belt.</p>
+
+		</div>
+
+	</div>
+
+
+
 
 
 
@@ -78,9 +126,7 @@
 
 		<div class="isolation_block">
 
-			<p>First, we're going to show you Australia's farm belt.</p>
-
-			<p>This map shows how land in Australia is categorised by use. In this case, we're showing the farmland that relies heavily on rainfall - cropping areas and grazing pastures, as well as irrigated areas.</p>
+			<p>This map shows how land in Australia is categorised by use. In this case, we're showing the farmland that relies heavily on rainfall – cropping areas and grazing pastures, as well as irrigated areas.</p>
 
 		</div>
 
@@ -104,9 +150,9 @@
 
 			<p>So what has happened in these areas?</p>
 
-			<p>The Bureau of Meteorology measures drought in terms of "rainfall deficiency". Essentially, this compares rainfall over a given period to the long-term average, and then determines if it is above or below average, and by how much. Put simply it's a measurement that can show if there is too little – or too much – rain.</p>
+			<p>The Bureau of Meteorology measures drought in terms of "rainfall deficiency". Essentially, this compares rainfall over a given period with the long-term average, and then determines if it is above or below average, and by how much. Put simply, it's a measurement that can show if there is too little – or too much – rain.</p>
 
-			<p>Maps of rainfall deficiency show a significantly large portion of eastern Australia has been experiencing dryer than normal conditions since 2013, with the exception of a decent amount of rain in 2016.</p>
+			<p>Maps of rainfall deficiency show a significantly large portion of eastern Australia has been experiencing drier than normal conditions since 2013, despite a decent amount of rain falling in 2016:</p>
 
 		</div>
 
@@ -140,7 +186,7 @@
 
 		<div class="isolation_block">
 
-			<p>The lack of rain has been particularly severe in western Queensland, with some areas having been drought declared for the past five years. More recently, the drought has worsened in NSW to the point where in August 2018 the <a href="https://www.theguardian.com/environment/2018/aug/08/nsw-declared-100-in-drought-as-farmers-fear-relief-package-too-late" target="_blank">entire state was either in drought, or drought affected</a>.</p>
+			<p>The lack of rain has been particularly severe in western Queensland, and some areas have been drought-declared for the past five years. More recently, the drought has worsened in NSW. In August 2018 the <a href="https://www.theguardian.com/environment/2018/aug/08/nsw-declared-100-in-drought-as-farmers-fear-relief-package-too-late" target="_blank">entire state was either in drought, or drought-affected</a>.</p>
 
 		</div>
 
@@ -151,11 +197,11 @@
 
 		<div class="isolation_block">
 
-			<p>There are other indicators which can show the influence of drought, and its impact on the land.</p>
+			<p>There are other indicators that can show the influence of drought, and its impact on the land.</p>
 
-			<p>Root zone soil moisture measures the percentage of moisture in the top metre of soil, and is a good indication of the water available to plants in a given area. Drier soil can mean poorer crops, or none at all. This map shows the average root zone soil moisture for 2018 compared to the long term average for the last 105 years.</p>
+			<p>Root zone soil moisture measures the percentage of moisture in the top metre of soil, and is a good indication of the water available to plants in a given area. Drier soil can mean poorer crops, or none at all. This map shows the average root zone soil moisture for 2018 compared with the long-term average for the past 105 years.</p>
 
-			<p>In many areas of NSW the soil is about as dry as it has ever been with a large swathes of land in the driest 1%.</p>
+			<p>In many areas of NSW the soil is about as dry as it has ever been, with large swathes of land in the driest 1%.</p>
 
 		</div>
 
@@ -190,7 +236,7 @@
 
 				<p>While some of these droughts pre-date the systematic collection of temperature records that started in 1900, climate researchers have use innovative techniques to reconstruct rainfall records for a period of Australian history covering the past 800 years.</p>
 
-				<p>Mandy Freund is a climate scientist at the University of Melbourne who lead an innovative research project that <a href="https://theconversation.com/recent-australian-droughts-may-be-the-worst-in-800-years-94292" target="_blank">used tree rings, ice cores and corals to reconstruct rainfall records over a long period</a>, with the aim of examining climate variability in Australia.</p>
+				<p>Mandy Freund is a climate scientist at the University of Melbourne who led an innovative research project that <a href="https://theconversation.com/recent-australian-droughts-may-be-the-worst-in-800-years-94292" target="_blank">used tree rings, ice cores and corals to reconstruct rainfall records over a long period</a>, with the aim of examining climate variability in Australia.</p>
 
 				<p>Her study found that the more recent droughts of the 20th and 21st century were particularly severe.</p>
 
@@ -205,17 +251,17 @@
 				</div>
 
 
-				<p>"We found that the millenium drought in southern Australia was quite extreme, it was unprecedented in terms of intensity and duration," she said.</p>
+				<p>"We found that the millenium drought in southern Australia was quite extreme; it was unprecedented in terms of intensity and duration," she says.</p>
 
-				<p>Freund's research showed the WWII and Federation droughts were also particularly intense when compared against the last 400 years.</p>
+				<p>Freund's research showed the second world war and Federation droughts were also particularly intense when compared against droughts over the past 400 years.</p>
 
-				<p>The research also showed a change in rainfall patterns in Australia in the last century.</p>
+				<p>The research also showed a change in rainfall patterns in Australia in the past century.</p>
 
-				<p>"We found that the most recent period, the rainfall in the south is quite unusual - we're getting less rainfall, especially during the cool season," she said.</p>
+				<p>"We found that [in] the most recent period, the rainfall in the south is quite unusual – we're getting less rainfall, especially during the cool season," she says.</p>
 
 				<p>"The other thing we found, specifically for northern Australia in the warm season, it's getting wetter than ever before."</p>
 
-				<p>Here, you can see a comparison of historical and modern droughts using the reconstructed data up to 1900.</p>
+				<p>Here, you can see a comparison of historical and modern droughts using the reconstructed data up to 1900:</p>
 
 
 
@@ -249,7 +295,7 @@
 
 		<div class="breakout_block">
 
-			<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology - this timeline shows the annual rainfall deficiency, with maps showing drier and wetter areas. .</p>
+			<p>After 1900 there is detailed rainfall data available from the Bureau of Meteorology. This timeline shows the annual rainfall deficiency, with maps showing drier and wetter areas:</p>
 
 		</div>
 
@@ -293,27 +339,28 @@
 
 			<h2>How is climate change affecting drought in Australia?</h2>
 
-			<p>According to <a href="http://www.bom.gov.au/state-of-the-climate/" target="_blank">the most recent State of the Climate report</a>, Australia has already warmed by 1 degree since 1910. Here, you can see the trend towards warmer years over the period covered by Bureau data:</p>
+			<p>According to <a href="http://www.bom.gov.au/state-of-the-climate/" target="_blank">the most recent State of the Climate report</a>, Australia has already warmed by 1C since 1910. Here, you can see the trend towards warmer years over the period covered by bureau data:</p>
 
 			<div id="temp_block" class="temp_block"></div>
 
-			<p>So how will the warming trend affect drought in Australia, and what effect has it already had?</p>
+			<p>So how will the warming trend affect drought in Australia, and what effect has it already had? </p>
 
 			<p>According to Andrew King, a climate scientist at the University of Melbourne, climate change is already making droughts worse, but not necessarily in terms of length.</p>
 
-			<p>"In general climate change is exacerbating drought - mainly because in a warmer world we experience more evaporation from the surface and we project for that to continue in the future," he said.</p>
+			<p>"In general climate change is exacerbating drought, mainly because in a warmer world we experience more evaporation from the surface, and we project for that to continue in the future," he says.</p>
 
-			<p>"So when it does rain, more of that water is likely to be lost to the atmosphere through evaporation than before human caused climate change".</p>
+			<p>"So when it does rain, more of that water is likely to be lost to the atmosphere through evaporation than before human-caused climate change".</p>
 
-			<p>However the science is more complicated when looking at the influence of climate change on rainfall, in part due to high levels of weather variability. </p>
+			<p>However, the science is more complicated when looking at the influence of climate change on rainfall, in part due to high levels of weather variability.</p> 
 
-			<p>"For most of Australia we don't really see a big trend, except for the south-west of Western Australia," he said.</p>
+			<p>"For most of Australia we don't really see a big trend, except for the south-west of Western Australia," King says.</p>
 
-			<p>"We have really high variability in our rainfall as well, especially in inland NSW where the drought is worse at the moment. So there isn't much of a trend in rainfall deficiency, and there isn't much of a climate change influence."</p>
+			<p>"We have really high variability in our rainfall as well, especially in inland NSW where the drought is worse at the moment. So there isn't much of a trend in rainfall deficiency, and there isn't much of a climate change influence.</p>
 
-			<p>"But when we look at other measures of drought which incorporate temperature effects and evaporation changes then we start to see the climate change signal emerge - and that's projected to follow the same pattern in the future as well." </p>
+			<p>"But when we look at other measures of drought, which incorporate temperature effects and evaporation changes, then we start to see the climate change signal emerge – and that's projected to follow the same pattern in the future as well."</p> 
 
 			<p>The CSIRO and Bureau of Meteorology have compiled different models for predicting the outcome of climate change in Australia to produce a guide to how different regions will likely be affected.</p>
+
 
 		</div>
 
@@ -329,7 +376,7 @@
 
 		<div class="isolation_block">
 
-			<p>According to this work, droughts are predicted to increased in a large portion of southern Australia, though it's worth pointing out that the projection has a "medium" level of confidence in most areas (all of the projections are assigned a <a href="https://www.climatechangeinaustralia.gov.au/media/ccia/2.1.6/cms_page_media/168/Chapter%20Six.pdf" target="_blank">confidence level based on evidence, and amount of agreement between various bits of evidence</a>).</p>
+			<p>According to this work, droughts are predicted to increase in a large portion of southern Australia, though it's worth pointing out that the projection has a "medium" level of confidence in most areas (all of the projections are assigned a <a href="https://www.climatechangeinaustralia.gov.au/media/ccia/2.1.6/cms_page_media/168/Chapter%20Six.pdf" target="_blank">confidence level based on evidence, and amount of agreement between various bits of evidence</a>).</p>
 						
 		</div>
 
@@ -339,7 +386,7 @@
 
 		<div class="isolation_block">
 
-			<p>The prediction for rainfall changes is, as King says, quite variable. In several areas the winter or 'cool season' rainfall is predicted to decrease, but it's not clear whether this will necessarily lead to an overall annual decrease in rainfall in these areas.</p>
+			<p>The prediction for rainfall changes is, as King says, quite variable. In several areas the winter or “cool season” rainfall is predicted to decrease but it's not clear whether this will necessarily lead to an overall annual decrease in rainfall in these areas.</p>
 
 		</div>
 
@@ -349,7 +396,7 @@
 
 		<div class="isolation_block">
 
-			<p>However, the predictions around temperature and evaporation are comparatively very clear - every part of Australia will continue to experience increases in average temperature, and will have a higher frequency of hot days.</p>
+			<p>However, the predictions around temperature and evaporation are comparatively very clear: every part of Australia will continue to experience increases in average temperature, and will have a higher frequency of hot days.</p>
 
 		</div>
 
