--- a/src/css/new/timeline.scss
+++ b/src/css/new/timeline.scss
@@ -8,15 +8,29 @@
 	
 
 	@include mq($until: tablet) {
-		width: calc(100% - 40px);
+		width: 100%;
 		height: 320px;
 		background-repeat: no-repeat;
 		border-top: 1px solid darkgrey;
 		z-index: 999;
 		background-color: white;
+		background-position: center;
 	}
 
-	@include mq($from: tablet) {
+
+	@include mq($from: tablet, $until: desktop) {
+		float: right;
+		width: 220px;
+		height: 220px;
+		background-color: white;
+		border-radius: 50%;
+		border-style: solid;
+    	border-width: 1px;
+    	border-color: black;
+	}
+
+
+	@include mq($from: desktop) {
 		float: right;
 		width: 320px;
 		height: 320px;
@@ -39,7 +53,10 @@
 	@include mq($until: tablet) {
 		position: fixed;
 		bottom: 0px;
-		width: calc(100% - 40px);
+		left: 0px;
+		right: 0px;
+		width: 100%;
+		background-color: white;
 	}
 
 	@include mq($from: tablet) {
@@ -54,7 +71,7 @@
 .anomolies_header {
     width: 100%;
     max-width: 960px;
-    height: 70px;
+    
     background-color: white;
     box-sizing: border-box;
     
@@ -63,13 +80,15 @@
     border-bottom: 1px solid darkgrey;
 
     @include mq($until: tablet) {
-    	font-size: 20px;
-    	line-height: 24px;
+    	font-size: 16px;
+    	line-height: 22px;
     	padding-top: 10px;
+    	height: 40px;
     }
 
     @include mq($from: tablet) {
     	padding: 20px;
+    	height: 70px;
     }
 
 }
