--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -46,7 +46,17 @@
 
 			<p>“Whether it is climate change or it is not,” Morrison said, “is completely irrelevant to everybody here.”</p>
 
-			<p>For people suffering from lack of income, both in town and farm, drought is awful and relentless as each day dawns an overwhelming blue. Often communities get so focussed on surviving from day to day, it is difficult to see a bigger picture.  While the consequences of drought for regional communities don’t change, the conversations about it are changing, centring more and more on best management in a changing climate. What if this is the new normal?</p> 
+			<p>For people suffering from lack of income, both in town and farm, drought is awful and relentless as each day dawns an overwhelming blue. Often communities get so focussed on surviving from day to day, it is difficult to see a bigger picture.  While the consequences of drought for regional communities don’t change, the conversations about it are changing, centring more and more on best management in a changing climate. What if this is the new normal?</p>
+
+			<div class="inline_column_image">
+					<div class="inline_block">
+						<img class="imagine" src="<%= path %>/assets/images/drought-4.jpg">
+					</div>
+				</div>
+
+			<div class="picture_caption captivate">
+				Australian Prime Minister Scott Morrison holds up a photo from February 2016 of what sheep and cattle graziers Stephen and Annabel Tully's property used to look like. Photograph: Alex Ellinghausen
+			</div>
 
 			<p>Drought policy is still mostly conceived in the grip of dry times – a fact that has universally been lamented by farmers who have spoken to Guardian Australia.</p> 
 
@@ -242,12 +252,12 @@
 
 				<div class="inline_column_image">
 					<div class="inline_block">
-						<img class="imagine" src="<%= path %>/assets/images/drought-1.jpg">
+						<img class="imagine" src="<%= path %>/assets/images/drought-5.jpg">
 					</div>
 				</div>
 
 				<div class="picture_caption captivate">
-					Drought-affected land near Tambo, Queensland. Photograph: Mike Bowers for Guardian Australia
+					Sommariva station, a cattle and olive business outside Charleville, Queensland Australia. Photograph: Mike Bowers for Guardian Australia
 				</div>
 
 
@@ -430,7 +440,7 @@
 		<div class="credits col50">
 			<h2>Credits</h2>
 			<div class="credits-inner">
-				<p class="gia-byline"><span>Words:</span> <a href='https://www.theguardian.com/profile/anne-davies'>Anne Davies</a></p>
+				<p class="gia-byline"><span>Words:</span> <a href='https://www.theguardian.com/profile/gabrielle-chan'>Gabrielle Chan</a> and <a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a></p>
 				<p class="gia-byline"><span>Photo and video:</span> <a href='https://www.theguardian.com/profile/mike-bowers'>Mike Bowers</a></p>
 				<p class="gia-byline"><span>Design and development:</span> <a href='https://www.theguardian.com/profile/andy-ball'>Andy Ball</a> and <a href='https://www.theguardian.com/profile/nick-evershed'>Nick Evershed</a></p>
 			</div>
@@ -441,42 +451,42 @@
 
 			<li>
 				<div class="footer-item-container">
-					<img src="https://i.guim.co.uk/img/media/e887ff6603ad0a924d0c3b70ba5c22fe0c3fcd91/0_0_3000_1801/master/3000.jpg?w=620&q=55&auto=format&usm=12&fit=max&s=83a09c8bd38e16fa750cc3e8c2425917">
+					<img src="https://i.guim.co.uk/img/media/1a981352cc7ed787c53dc33a37083d666b9f137e/0_375_3992_2395/master/3992.jpg?width=620&quality=85&auto=format&fit=max&s=c3502e443aec803f0e6f529067a5b140">
 					<div class="footer-text-content">
-						<h2>Murray-Darling system under strain as orchard plantings increase 41%</h2>
+						<h2>The land falls silent: Australian farmers battle life without rain</h2>
 					</div>
-					<a class="class="anchor" href="https://www.theguardian.com/environment/2018/mar/22/murray-darling-system-under-strain-as-tree-plantations-increase-41" target="_blank"></a>
+					<a class="class="anchor" href="https://www.theguardian.com/environment/2018/sep/03/australian-farmers-battle-life-without-rain-drought" target="_blank"></a>
 				</div>
 			</li>
 
 			
 			<li>
 				<div class="footer-item-container">
-					<img src="https://i.guim.co.uk/img/media/6e7cf68d357527395bddc1bb3029415ea2178942/0_107_5325_3195/master/5325.jpg?w=620&q=55&auto=format&usm=12&fit=max&s=1ba4f71a88ed3dfaad5c89842a2cad5e">
+					<img src="https://i.guim.co.uk/img/media/c59708471aa63f0cca0bc7785392117e3d1a5908/0_0_4500_3000/master/4500.jpg?width=620&quality=85&auto=format&fit=max&s=12728eeab649753d905d1662b075a3a1">
 					<div class="footer-text-content">
-						<h2>Murray-Darling on alert over blue-green algae from water over-extraction</h2>
+						<h2>'It's dire': farmers battle their worst drought in 100 years – photo essay</h2>
 					</div>
-					<a class="class="anchor" href="https://www.theguardian.com/australia-news/2018/mar/05/murray-darling-on-alert-over-blue-green-algae-from-water-over-extraction" target="_blank"></a>
+					<a class="class="anchor" href="https://www.theguardian.com/environment/2018/jul/19/you-count-your-blessings-farm-families-battling-drought-photo-essay" target="_blank"></a>
 				</div>
 			</li>
 
 			<li>
 				<div class="footer-item-container">
-					<img src="https://i.guim.co.uk/img/media/ad22d50bd7cf8164c4e148c852e82db2c3cb54c7/0_0_2954_1969/master/2954.jpg?w=860&q=55&auto=format&usm=12&fit=max&s=c415bc6fa6831352a7ebf6cea4a5ba55">
+					<img src="https://i.guim.co.uk/img/media/dae314870dfffd3b9c3c8438be61d9c12d296387/0_208_3264_1958/master/3264.jpg?width=620&quality=85&auto=format&fit=max&s=0d2111d10f2f21f0f9e98dbadab3f9c3">
 					<div class="footer-text-content">
-						<h2>$78m buyback of Darling water was nearly double its valuation</h2>
+						<h2>Australia's drought crisis and farmers' stories of anxiety, fear and resilience</h2>
 					</div>
-					<a class="class="anchor" href="https://www.theguardian.com/australia-news/2017/oct/26/78m-spent-on-darling-water-buyback-nearly-double-its-valuation" target="_blank"></a>
+					<a class="class="anchor" href="https://www.theguardian.com/australia-news/2018/aug/04/australias-drought-crisis-and-farmers-stories-of-anxiety-fear-and-resilience" target="_blank"></a>
 				</div>
 			</li>
 
 			<li>
 				<div class="footer-item-container">
-					<img src="https://i.guim.co.uk/img/media/fac767ce607f5e13e5d7a6e5ddfd86a845e8fb9e/0_279_4256_2553/master/4256.jpg?w=860&q=55&auto=format&usm=12&fit=max&s=311e66fb52bffbee7d9155fd11d00239">
+					<img src="https://i.guim.co.uk/img/media/c20038830851bcb9b1cae25a8738ffb4088e08b4/0_0_4576_3051/master/4576.jpg?width=620&quality=85&auto=format&fit=max&s=65baec98e47e322c09e8b1ca02c4ab49">
 					<div class="footer-text-content">
-						<h2>NSW minister altered Barwon-Darling water-sharing plan to favour irrigators</h2>
+						<h2>If you’re talking about drought but not climate change, you’re not doing your job, PM</h2>
 					</div>
-					<a class="class="anchor" href="https://www.theguardian.com/australia-news/2018/feb/08/nsw-minister-altered-barwon-darling-water-sharing-plan-to-favour-irrigators" target="_blank"></a>
+					<a class="class="anchor" href="https://www.theguardian.com/business/grogonomics/2018/aug/30/if-youre-talking-about-drought-but-not-climate-change-youre-not-doing-your-job-pm" target="_blank"></a>
 				</div>
 			</li>
 
